--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -226,10 +226,18 @@
 
 
             <Grid x:Name="SidebarGrid" Grid.Column="0">
-                <ListBox Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="5,0,0,0" Margin="0,99,0,0.5">
+                <ListBox ItemsSource="{ Binding PlayLists}" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="5,0,0,0" Margin="0,99,0,0.5">
                     <ListBox.Background>
                         <SolidColorBrush Color="#FF161616" Opacity="1"/>
                     </ListBox.Background>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="{ Binding Icon}"/></TextBlock>
+                                <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="{ Binding Name }"/></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                     <ListBoxItem Margin="0,10">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="PLAYLISTS"/></TextBlock>
