--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -346,7 +346,13 @@
                             <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Foreground="#FFC19BEB" Panel.ZIndex="90" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" Margin="9,8.176,0,0" Width="15.143" FontSize="13.333" Height="18.824" VerticalAlignment="Top"><Span><Run Text="&#xF002;"/></Span></TextBlock>
 
 
-                            <TextBox x:Name="musicSearchTextBox" TextWrapping="Wrap" Text="Search an Artist, an Album or a Song ..." Grid.Row="0" Grid.ColumnSpan="5" Background="Black" BorderBrush="#FF303030" BorderThickness="0,0,0,1" Foreground="#FFDFE1E5" Padding="28,8,8,8" />
+                            <TextBox x:Name="musicSearchTextBox" TextWrapping="Wrap" Text="{ Binding SearchBarContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Grid.Row="0" Grid.ColumnSpan="5" Background="Black" BorderBrush="#FF303030" BorderThickness="0,0,0,1" Foreground="#FFDFE1E5" Padding="28,8,8,8">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <i:InvokeCommandAction Command="{ Binding writeStuff }" CommandParameter="Lol"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </TextBox>
 
                             <TextBlock x:Name="searchTextBlox" IsHitTestVisible="False" Text="Men att läsa" Width="300"  TextAlignment="Left" Height="30" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" Padding="5, 5, 5, 5"  Foreground="LightGray" Panel.ZIndex="99" Background="#FFFC1414">
                                 <TextBlock.Style>
@@ -359,7 +365,6 @@
                                             <DataTrigger Binding="{Binding IsFocused, ElementName=musicSearchTextBox}" Value="True">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                             </DataTrigger>
-
                                         </Style.Triggers>
                                     </Style>
                                 </TextBlock.Style>
