--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
-        Title="Sharplayer" Height="450" Width="700" MinWidth="700" MinHeight="450" FontFamily="FontAw" Background="Black">
+        Title="Sharplayer" Height="233" Width="307" MinWidth="700" MinHeight="450" FontFamily="FontAw" Background="Black">
     <Window.Resources>
 
         <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
@@ -225,19 +225,59 @@
 
 
 
-            <Grid x:Name="SidebarGrid" Grid.Column="0">
-                <ListBox ItemsSource="{ Binding PlayLists}" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="5,0,0,0" Margin="0,99,0,0.5">
+            <Grid x:Name="SidebarGrid" Grid.Column="0" Background="#FF161616">
+                <ListBox Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="5,0,0,0" Height="99" VerticalAlignment="Top">
                     <ListBox.Background>
                         <SolidColorBrush Color="#FF161616" Opacity="1"/>
                     </ListBox.Background>
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="{ Binding Icon}"/></TextBlock>
-                                <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="{ Binding Name }"/></TextBlock>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
+
+                	<ListBoxItem Margin="0,10">
+                		<StackPanel Orientation="Horizontal">
+                			<TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="COMPUTER"/></TextBlock>
+                		</StackPanel>
+                	</ListBoxItem>
+
+                	<ListBoxItem>
+                		<i:Interaction.Triggers>
+                			<i:EventTrigger EventName="PreviewMouseDown">
+                				<i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerMusic"/>
+                			</i:EventTrigger>
+                		</i:Interaction.Triggers>
+                		<StackPanel Orientation="Horizontal">
+                			<TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Text="&#xF001;" Width="12" Height="12"/>
+                			<TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="Music"/></TextBlock>
+                		</StackPanel>
+                	</ListBoxItem>
+                	<ListBoxItem>
+                		<i:Interaction.Triggers>
+                			<i:EventTrigger EventName="PreviewMouseDown">
+                				<i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerPhoto"/>
+                			</i:EventTrigger>
+                		</i:Interaction.Triggers>
+                		<StackPanel Orientation="Horizontal">
+                			<TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="&#xF030;"/></TextBlock>
+                			<TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Photo"/></TextBlock>
+                		</StackPanel>
+                	</ListBoxItem>
+
+
+                	<ListBoxItem>
+                		<i:Interaction.Triggers>
+                			<i:EventTrigger EventName="PreviewMouseDown">
+                				<i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerVideo"/>
+                			</i:EventTrigger>
+                		</i:Interaction.Triggers>
+                		<StackPanel Orientation="Horizontal">
+                			<TextBlock FontFamily="FontAwesome" FontSize="11" Margin="0,2,0,0" Height="12" Width="12"><Run Text="&#xF008;"/></TextBlock>
+                			<TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Video"/></TextBlock>
+                		</StackPanel>
+                	</ListBoxItem>
+
+                </ListBox>
+                <ListBox Foreground="#FFDFE1E5" BorderBrush="#FF303030" BorderThickness="0,0,0,1" Padding="5,0,0,0" Margin="0,99,0,41.5">
+                    <ListBox.Background>
+                        <SolidColorBrush Color="#FF161616" Opacity="1"/>
+                    </ListBox.Background>
                     <ListBoxItem Margin="0,10">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="PLAYLISTS"/></TextBlock>
@@ -263,54 +303,12 @@
                     </ListBoxItem>
 
                 </ListBox>
-                <ListBox Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="5,0,0,0" Height="99" VerticalAlignment="Top">
-                    <ListBox.Background>
-                        <SolidColorBrush Color="#FF161616" Opacity="1"/>
-                    </ListBox.Background>
-
-                    <ListBoxItem Margin="0,10">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="COMPUTER"/></TextBlock>
-                        </StackPanel>
-                    </ListBoxItem>
-
-                    <ListBoxItem>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="PreviewMouseDown">
-                                <i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerMusic"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Text="&#xF001;" Width="12" Height="12"/>
-                            <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="Music"/></TextBlock>
-                        </StackPanel>
-                    </ListBoxItem>
-                    <ListBoxItem>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="PreviewMouseDown">
-                                <i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerPhoto"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="&#xF030;"/></TextBlock>
-                            <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Photo"/></TextBlock>
-                        </StackPanel>
-                    </ListBoxItem>
-
-
-                    <ListBoxItem>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="PreviewMouseDown">
-                                <i:InvokeCommandAction Command="{Binding writeStuff}" CommandParameter="ComputerVideo"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="FontAwesome" FontSize="11" Margin="0,2,0,0" Height="12" Width="12"><Run Text="&#xF008;"/></TextBlock>
-                            <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Video"/></TextBlock>
-                        </StackPanel>
-                    </ListBoxItem>
-
-                </ListBox>
+                <RepeatButton x:Name="addPlaylistButton" Command="{Binding fastCommand}" Content="&#xF196;" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="0,0,10,8" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="20" BorderBrush="{x:Null}" Panel.ZIndex="99">
+                	<RepeatButton.Background>
+                		<SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                	</RepeatButton.Background>
+                </RepeatButton>
+                <TextBlock TextWrapping="Wrap" Margin="0,0,35,12.6" Foreground="#FFC19BEB" HorizontalAlignment="Right" Width="74.46" Height="14.4" VerticalAlignment="Bottom"><Run Language="fr-fr" Text="Add a playlist"/></TextBlock>
             </Grid>
             <GridSplitter HorizontalAlignment="Right" 
         						VerticalAlignment="Stretch" 
@@ -431,22 +429,22 @@
                 <Grid.Background>
                     <SolidColorBrush Color="Black" Opacity="0"/>
                 </Grid.Background>
-                <RepeatButton x:Name="backwardButton" Command="{Binding reverseCommand}" Content="&#xF04A;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="0,6.332,0,2.667" Height="30" BorderBrush="{x:Null}">
+                <RepeatButton x:Name="backwardButton" Command="{Binding reverseCommand}" Content="&#xF04A;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="52,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
                     <RepeatButton.Background>
                         <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                     </RepeatButton.Background>
                 </RepeatButton>
-                <Button x:Name="playButton" Command="{Binding playCommand}" Content="{Binding PlayIcon, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFC19BEB" BorderThickness="0" Margin="42,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
+                <Button x:Name="playButton" Command="{Binding playCommand}" Content="{Binding PlayIcon, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFC19BEB" BorderThickness="0" Margin="94,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
                     <Button.Background>
                         <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="stopButton" Command="{Binding stopCommand}" Content="&#xF04D;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="84,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
+                <Button x:Name="stopButton" Command="{Binding stopCommand}" Content="&#xF04D;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="137,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
                     <Button.Background>
                         <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                     </Button.Background>
                 </Button>
-                <RepeatButton x:Name="forwardButton" Command="{Binding fastCommand}" Content="&#xF04E;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="126,6.332,0,2.667" Height="30" BorderBrush="{x:Null}">
+                <RepeatButton x:Name="forwardButton" Command="{Binding fastCommand}" Content="&#xF04E;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="179,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
                     <RepeatButton.Background>
                         <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                     </RepeatButton.Background>
@@ -463,6 +461,16 @@
                 </RepeatButton>
                 <TextBlock x:Name="volumeIcon" Margin="0,0,121.37,11.697" TextWrapping="Wrap" Foreground="#FFDFE1E5" RenderTransformOrigin="1.673,0.443" FontSize="13.333" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" Text="&#xF028;" Height="13.444" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="12.38"/>
                 <Slider x:Name="volumeSlider" IsMoveToPointEnabled="true"  Margin="0,0,10,9" Minimum="0" Foreground="{x:Null}"  Style="{StaticResource Horizontal_Slider}" Panel.ZIndex="99" Height="21" VerticalAlignment="Bottom" Maximum="100" Value="50" HorizontalAlignment="Right" Width="60"/>
+                <RepeatButton x:Name="backwardButton_Copy" Command="{Binding reverseCommand}" Content="&#xF049;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="10,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
+                	<RepeatButton.Background>
+                		<SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                	</RepeatButton.Background>
+                </RepeatButton>
+                <RepeatButton x:Name="forwardButton_Copy" Command="{Binding fastCommand}" Content="&#xF050;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="221,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
+                	<RepeatButton.Background>
+                		<SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                	</RepeatButton.Background>
+                </RepeatButton>
             </Grid>
         </Border>
         <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
