--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -442,7 +442,7 @@
                 <Grid.Background>
                     <SolidColorBrush Color="Black" Opacity="0"/>
                 </Grid.Background>
-                <RepeatButton x:Name="backwardButton" Command="{Binding reverseCommand}" Content="&#xF04A;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="0,6.332,0,2.667" Height="30" BorderBrush="{x:Null}">
+                <RepeatButton x:Name="backwardButton" Command="{Binding reverseCommand}" Content="&#xF04A;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="52,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
                     <RepeatButton.Background>
                         <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                     </RepeatButton.Background>
@@ -474,16 +474,16 @@
                 </Button>
                 <TextBlock x:Name="volumeIcon" Margin="0,0,121.37,11.697" TextWrapping="Wrap" Foreground="#FFDFE1E5" RenderTransformOrigin="1.673,0.443" FontSize="13.333" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" Text="&#xF028;" Height="13.444" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="12.38"/>
                 <Slider x:Name="volumeSlider" IsMoveToPointEnabled="true"  Margin="0,0,10,9" Minimum="0" Foreground="{x:Null}"  Style="{StaticResource Horizontal_Slider}" Panel.ZIndex="99" Height="21" VerticalAlignment="Bottom" Maximum="100" Value="50" HorizontalAlignment="Right" Width="60"/>
-                <RepeatButton x:Name="previousButton" Command="{Binding reverseCommand}" Content="&#xF049;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="10,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
-                	<RepeatButton.Background>
+                <Button x:Name="previousButton" Command="{Binding reverseCommand}" Content="&#xF049;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="10,6.833,0,3.167" Height="30" BorderBrush="{x:Null}" RenderTransformOrigin="1.845,0.206">
+                	<Button.Background>
                 		<SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
-                	</RepeatButton.Background>
-                </RepeatButton>
-                <RepeatButton x:Name="nextButton" Command="{Binding fastCommand}" Content="&#xF050;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="221,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
-                	<RepeatButton.Background>
+                	</Button.Background>
+                </Button>
+                <Button x:Name="nextButton" Command="{Binding fastCommand}" Content="&#xF050;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="221,6.832,0,3.167" Height="30" BorderBrush="{x:Null}">
+                	<Button.Background>
                 		<SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
-                	</RepeatButton.Background>
-                </RepeatButton>
+                	</Button.Background>
+                </Button>
             </Grid>
         </Border>
         <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
