--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
-        Title="Sharplayer" Height="233" Width="307" MinWidth="700" MinHeight="450" FontFamily="FontAw" Background="Black">
+        Title="Sharplayer" Height="36" Width="213" MinWidth="700" MinHeight="450" FontFamily="FontAw" Background="Black">
     <Window.Resources>
 
         <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
@@ -330,13 +330,6 @@
 
             <Grid x:Name="ContentGrid" ClipToBounds="True" Background="Black" Margin="0,0,0,0.5" Grid.Column="2">
                 <TabControl BorderBrush="{x:Null}" BorderThickness="0" Background="{x:Null}" Padding="0" x:Name="MainTabControl" SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,-25,0,0">
-                    <TabItem Header="Musique" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" >
-                        <Grid Background="Black" Margin="0,0,0,0.5">
-                            <TextBlock x:Name="artist" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="{Binding NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
-                            <TextBlock x:Name="title" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="{Binding NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
-                            <TextBlock x:Name="musicIcon" Margin="96.834,125.648,164.833,85.648" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
-                        </Grid>
-                    </TabItem>
                     <TabItem Header="Playlist" BorderBrush="{x:Null}" Margin="-1.5,-2,0,0.5" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Width="52" Height="22" VerticalAlignment="Bottom">
                         <Grid Background="Black">
 
@@ -433,6 +426,19 @@
                             </ListBox>
                         </Grid>
                     </TabItem>
+                    <TabItem Header="Video Playing" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" >
+                    	<Grid Background="Black" Margin="0,0,0,0.5">
+                    		<ContentControl Content="{Binding MyMediaElement}" Foreground="Red" Background="Black" Panel.ZIndex="90"/>
+                    		<TextBlock x:Name="musicIcon" Margin="212,131.75" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF008;"/></Span></TextBlock>
+                    	</Grid>
+                    </TabItem>
+                    <TabItem Header="Music Playing" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0" >
+                    	<Grid Background="Black" Margin="0,0,0,0.5">
+                    		<TextBlock x:Name="artist1" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="{Binding NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
+                    		<TextBlock x:Name="title1" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="{Binding NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
+                    		<TextBlock x:Name="musicIcon1" Margin="217,131.75" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
+                    	</Grid>
+                    </TabItem>
                 </TabControl>
             </Grid>
         </Grid>
@@ -486,7 +492,6 @@
                 </Button>
             </Grid>
         </Border>
-        <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
 
     </Grid>
 </Window>
