--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -214,6 +214,7 @@
     </Window.DataContext>
     <Grid Margin="0">
 
+        <Grid Margin="0" Panel.ZIndex="99"/>
 
         <Grid x:Name="WindowGrid" Margin="0,0,0,44">
 
@@ -424,17 +425,44 @@
                             </ListBox>
                         </Grid>
                     </TabItem>
-                    <TabItem Header="Video Playing" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" >
+                    <TabItem Header="Video Playing" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0,-2,-1" >
                     	<Grid Background="Black" Margin="0,0,0,0.5">
                     		<ContentControl Content="{Binding MyMediaElement}" Foreground="Red" Background="Black" Panel.ZIndex="90"/>
                     		<TextBlock x:Name="musicIcon" Margin="212,131.75" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF008;"/></Span></TextBlock>
                     	</Grid>
                     </TabItem>
-                    <TabItem Header="Music Playing" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0" >
+                    <TabItem Header="Images" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0" >
                     	<Grid Background="Black" Margin="0,0,0,0.5">
-                    		<TextBlock x:Name="artist1" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="{Binding NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
-                    		<TextBlock x:Name="title1" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="{Binding NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
-                    		<TextBlock x:Name="musicIcon1" Margin="217,131.75" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
+                    		<ListBox Grid.Column="0" x:Name="artistsListView_Copy" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="Black" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0"  UseLayoutRounding="False" Padding="-2" ItemContainerStyle="{DynamicResource PlayListListBoxItem}" >
+
+                    			<i:Interaction.Triggers>
+                    				<i:EventTrigger EventName="MouseDoubleClick">
+                    					<i:InvokeCommandAction  Command="{Binding artistSelected}" 
+                    						CommandParameter="{Binding SelectedItem, ElementName=artistsListView}" />
+                    				</i:EventTrigger>
+                    			</i:Interaction.Triggers>
+
+
+
+
+                    		</ListBox>
+                    	</Grid>
+                    </TabItem>
+                    <TabItem Header="Videos" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0" >
+                    	<Grid Background="Black" Margin="0,0,0,0.5">
+                    		<ListBox Grid.Column="0" x:Name="artistsListView_Copy1" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="Black" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0"  UseLayoutRounding="False" Padding="-2" ItemContainerStyle="{DynamicResource PlayListListBoxItem}" >
+
+                    			<i:Interaction.Triggers>
+                    				<i:EventTrigger EventName="MouseDoubleClick">
+                    					<i:InvokeCommandAction  Command="{Binding artistSelected}" 
+                    						CommandParameter="{Binding SelectedItem, ElementName=artistsListView}" />
+                    				</i:EventTrigger>
+                    			</i:Interaction.Triggers>
+
+
+
+
+                    		</ListBox>
                     	</Grid>
                     </TabItem>
                 </TabControl>
